--- a/_posts/thesis_chapters/2025-6-5-Design_v13.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v13.md
@@ -358,7 +358,6 @@ NOTE - DEVELOP THIS A BIT AS IT IS EXPLORED IN CHAPTER 6. CHANGE GRAPHIC TO A TA
 
 #### Brief analysis
 
-
 Chapter 2 reviewed research on using collections of gameplay design patterns to support learning in game design [@holopainen2007teaching; @holopainen2011foundations; @eriksson_using_2019; @bjork_patterns_2005]. Thematic organisation of these patterns shows potential to foster a shared understanding of game-making concepts within a coding community [@holopainen2011foundations]. For the documentation hub described above, I grouped game design patterns into categories based on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003; @olsson2014conceptual], as well as participants’ evolving requests for game features.
 
 The structuring of the collection of code examples, as outlined in were developed in response to requests for new features from participants, aligning with a shared motivation to encourage diverse learner pathways. This style of intervention aligns with the concept of just-in-time learning approaches within project-based learning [@riel1998education], where access to supporting documentation is provided based on learner need.
@@ -396,7 +395,7 @@ These tensions combined with previously explored cultural barriers to coding to 
 
 ![](./Pictures/At_tension_2_v2.png){width=95%}
 
-Fig 5.x – A contradiction between subject experience and the evolving involving cultural layer of the game-making activity - CHANGE TO A CONTRADICTION BETWEEN DOL AND SUBJECT
+Fig 5.x – A contradiction between subject experience and the evolving involving cultural layer of the game-making activity - CHANGE TO A CONTRADICTION BETWEEN  CULTURAL LAYER AND OBJECT
 
 
 The contradiction and subsequent feeling of alienation occurred despite a learning environment which included diverse and inclusive elements informed by previous research. The process of introducing accessible non-coding activities served to help acculturation to game making process in general, but as text coding was required later, the process only delayed alienation for some participants. Indeed, the process potentially heightens frustration if participants have invested into a process which they are later alienated from.  As such, addressing this contradiction required rethinking not only the technical scaffolds, as outline above, but also the broader cultural framing of participation to accommodate the contributions involving visual design, sound production, and narrative development in an on-going fashion, and a process to involve all participants in coding earlier on.
@@ -447,7 +446,12 @@ In P3, I introduced a light narrative framework to scaffold participant engageme
 
 The side missions were designed to support playful social dynamics and to foster a sense of shared community. By encouraging participants to engage with others’ work in imaginative ways, they helped shift the focus away from individual technical mastery and towards relational creativity. In line with third-generation activity theory, these missions acted as secondary stimuli that restructured the activity context and opened up new pathways for agency development. They positioned observation, playfulness, and curiosity as legitimate ways of participating, helping to validate roles beyond that of the coder.
 
-icipants in the evolving game-making community.
+**Narrative drama process - NEEDED OR NOT?**
+
+In P2 these missions were given as a stand alone extra activity. (WERE THEY?)
+
+In P3 they were wrapped around a narrative.
+
 
 <!-- #### SUMMARY AND LINK
 
@@ -461,7 +465,11 @@ While this section presents only a partial account of the missions and the drama
 
 MORE SIGNPOSTING? Chapter 7 focuses on analysing participant reactions to the design from a more cultural perspective in greater depth,
 
-Therefore, while this section has shown the importance of cultural factors in the activity, and thus in responsive design decisions, for the remainder of this chapter I return to discuss the findings in relation to existing research addressing technical / structural elements of the learning design to do with software tool use and supporting documentation.  
+<!-- #### What's missing and why - a map of learning dimensions -->
+
+This study differs from much of the research in the domain of CGD&P in that cultural and social aspects of the learning design are prioritise over the personal appropriation of computing concepts and practices. This is not to say that these concepts are not suitable for appropriation via participation in these activities. In Chapter 6, I present a framework of concepts that suit exploration via these game making activities as a proposed map of learning dimensions [^ld]. However, given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.   
+
+
 
 ## Chapter Discussion
 
@@ -480,42 +488,6 @@ This discussion explores features of the design narrative and the summative tabl
   - authenticity and blackboxing in particular as a constructionist approach
 - DBR -> germ cell & use of collection of GPD  -->
 
-### Analysis of the process so far with CHAT and DBR
-
-This chapter has described three contradictions that occurred during an iterative, phase-based approach using a methodology guided by techniques of DBR and CHAT. The use of a design narrative from DBR allows a detailed and replicable approach [^16].
-
-Table 5.2 above shows a summary of some of the tensions and design resolutions that emerged from the process.
-
-INSERT TABLE OF THE DESIGN FACTORS.
-
-Table 5.2- Table of emerging tensions and design responses
-
-NOTE -  Table of learning dimensions - IS MENTIONED IN TABLE BUT covered in Chapter 6 - so signpost
-
-At this point it is useful to describe a process here briefly  in relation to the three contradictions explored above [^17]. The evolution of these tools and documentation outlined in C1 and C2  was driven by a need to increase in instrumental agency due to the novice status of participants. As instrumental proficiency increased for some participants it allowed the development of peer learning and other social coding processes to emerge as described in C3.  
-
-The emergent and mutual nature of this design process aligns with both DBR principles and CHAT concepts of transformational agency by double stimulation (TADS). Specifically, transformation in tool use based on explicit and implicit feedback.
-
-The design approach that followed the moments of contraction outlined above  was responsive and uncertain. The process requiring me to rapidly generate and adapt software, documentation and processes in response to rapid identification and analysis of manifestations of emerging conflicts.  
-
-The descriptions of this chapter also show the process to be demanding on participants. I was fortunate that the tenacious character of the participants in P1 helped mitigate the challenges posed by the challenges introduced incomplete design.
-
-The design narrative above has acknowledges my active input into the direction of the process in line with an activist stance in terms of steering the design towards collaborative learning opportunities [@stetsenko2020radical]. My reflective analysis within journal entries show that While this general direction was present from early stages, my this on-going process served a purpose to divine a deeper understanding of my own guiding motivations driving the design changes [^18].
-
-
-<!-- In 3GAT terminology, the affordances of my design can be framed as a series of secondary stimuli. Sannino [@sannino_principle_2015] highlights the intersection of the use of secondary stimuli by participants and their volitional action or agency. While subsequent chapters explore shifts in the overall structure of participant activity in alignment with concepts of relational and transformative agency,  -->
-
-<!-- Instrumental agency can be seen as the base of a hierarchy of agency, in other words, that other dimensions of agency may need to be built on this one. This foundational agentic level is further explored in relation to other research in the following section. -->
-
-<!-- To do this it employs an argumentative grammar fusing elements of DBR and CHAT concepts: specifically iterative processes, analysis of emerging tensions between systems elements, a focus on affordances and secondary stimuli (particularly in relation to participant agency), and the process of rising to the concrete through exploration of a germ cell concept. -->
-
-<!-- DROP?
-The emergent and mutual nature of this design process aligns with both DBR and CHAT principles. In this chapter and the previous one, I have described my active role in motivating and supporting an emerging community through iterative phases. The design approach was open and risky, requiring me to rapidly generate new tools in response to changing needs. I was fortunate that the tenacious character of the participants in P1 helped mitigate the challenges posed by the incomplete design.  -->
-
-<!-- DROP?
-The concept of affordances, commonly used in DBR, is present in this design through the careful selection of technical tools and non-technical pedagogical strategies. The term affordances has also been extensively explored in the literature of human-computer interaction (HCI) from a CHAT perspective, defined as “possibilities for human actions mediated by cultural means” [@kaptelinin_affordances_2012, p.927]. -->
-
-<!-- In 3GAT terminology, the affordances of my design can be framed as a series of secondary stimuli. Sannino [@sannino_principle_2015] highlights the intersection of the use of secondary stimuli by participants and their volitional action or agency. While subsequent chapters explore shifts in the overall structure of participant activity in alignment with concepts of relational and transformative agency, the evolution of these tools, based on the novice status of the participants, also led to an increase in instrumental agency. This instrumental proficiency was required before the rich set of interactions based on peer learning and other social coding processes could emerge in playtesting practices. Instrumental agency can be seen as the base of a hierarchy of agency, in other words, that other dimensions of agency may need to be built on this one. This foundational agentic level is further explored in relation to other research in the following section. -->
 
 ### Analysis and discussion in relation to existing research - UMC, half-baked, and constructionist heuristics
 
@@ -545,6 +517,8 @@ ADDITION MADIHA's reflection in interview data.
 
 A possible drawback of using a professional tool for novice learners is the risk of culture shock when participants encounter the unfamiliar and potentially alienating aspects of a professional coding ecosystem. The learning design outlined in this chapter helps address at least the beginning of this process by providing a protective, scaffolded learning environment.
 
+
+
 #### A staged based approach structured around a germ cell concept of GDPs
 
 In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stage-based approach which introduces code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation.
@@ -562,7 +536,29 @@ This work differs in a core template is provided allowing for less instruction f
 
 In line with UMC, an advanced stage of the stage based approach would be the choice to imagine, design and implement a GDP not included in the menu provided, a process that Dan and Toby take on in P3 (see Vignette 7).
 
-### Summary table and metaphorical conceptual model
+### Summary of chapter CHAT and DBR concepts and a table of tensions
+
+This chapter has described three contradictions that occurred during an iterative, phase-based approach using a methodology guided by techniques of DBR and CHAT. The use of a design narrative from DBR allows a detailed and replicable approach [^16].
+
+Table 5.2 above shows a summary of some of the tensions and design resolutions that emerged from the process.
+
+INSERT TABLE OF THE DESIGN FACTORS.
+
+Table 5.2- Table of emerging tensions and design responses
+
+
+
+At this point it is useful to describe a process here briefly  in relation to the three contradictions explored above [^17]. The evolution of these tools and documentation outlined in C1 and C2  was driven by a need to increase in instrumental agency due to the novice status of participants. As instrumental proficiency increased for some participants it allowed the development of peer learning and other social coding processes to emerge as described in C3.  
+
+The emergent and mutual nature of this design process aligns with both DBR principles and CHAT concepts of transformational agency by double stimulation (TADS). Specifically, transformation in tool use based on explicit and implicit feedback.
+
+The design approach that followed the moments of contraction outlined above  was responsive and uncertain. The process requiring me to rapidly generate and adapt software, documentation and processes in response to rapid identification and analysis of manifestations of emerging conflicts.  
+
+The descriptions of this chapter also show the process to be demanding on participants. I was fortunate that the tenacious character of the participants in P1 helped mitigate the challenges posed by the challenges introduced incomplete design.
+
+The design narrative above has acknowledges my active input into the direction of the process in line with an active approach to steering  the design towards collaborative learning opportunities [maybe footnote] [@stetsenko2020radical]. My reflective analysis within journal entries show that While this general direction was present from early stages, my this on-going process served a purpose to divine a deeper understanding of my own guiding motivations driving the design changes [^18].
+
+<!-- Instrumental agency can be seen as the base of a hierarchy of agency, in other words, that other dimensions of agency may need to be built on this one. This foundational agentic level is further explored in relation to other research in the following section. -->
 
 
 
@@ -692,8 +688,9 @@ Gilbert is the worsted name.
 [^19] These design heuristics present in decisions made in creating microworld environments, the development of Scratch software, and constructionist gaming research include: principles of low floors, wide walls, high ceilings, open windows and choosing black boxes carefully (see Chapter 2 for a summary).
 
 
-[^20]: The process of having to change the underlying strcuture of the template in P1 was something that one group found particularly jarring. An experience outlined in interview data (Maggie 1) and in Appendix.tech
+[^20]: The process of having to change the underlying structure of the template in P1 was something that one group found particularly jarring. An experience outlined in interview data (Maggie 1) and in Appendix.tech
 
+[^ld]: The term map of learning dimensions . The map includes: computational thinking, systems thinking, computing concepts and practices.
 
 
 <!-- [^1]: https://mickfuzz.github.io/makecode-platformer-101/
