--- a/_posts/thesis_chapters/2025-6-5-Design_v13.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v13.md
@@ -466,7 +466,7 @@ While this section presents only a partial account of the missions and the drama
 MORE SIGNPOSTING? Chapter 7 focuses on analysing participant reactions to the design from a more cultural perspective in greater depth,
 
 <!-- #### What's missing and why - a map of learning dimensions -->
-
+NOT SURE WHERE TO PLACE THIS EXACTLY? LATER?
 This study differs from much of the research in the domain of CGD&P in that cultural and social aspects of the learning design are prioritise over the personal appropriation of computing concepts and practices. This is not to say that these concepts are not suitable for appropriation via participation in these activities. In Chapter 6, I present a framework of concepts that suit exploration via these game making activities as a proposed map of learning dimensions [^ld]. However, given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.   
 
 
@@ -487,6 +487,25 @@ This discussion explores features of the design narrative and the summative tabl
 <!-- - alignment with UMC, and other pedagogies (retrospectively found),
   - authenticity and blackboxing in particular as a constructionist approach
 - DBR -> germ cell & use of collection of GPD  -->
+
+
+#### A staged based approach structured around a germ cell concept of GDPs
+
+In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stage-based approach which introduces code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation.
+
+
+<!-- THIS STEPPED PROGRESSION COULD BE EXPRESSED AS A TABLE - OR A GRAPHIC .   -->
+
+![](./Pictures/staged_processes_v1.png){width=95%}
+
+Figure 5.x - Staged processes
+
+This stepped approach which increases complexity of the objective of activity, is present only in limited  CGD&P research. The work of Repenning on SGD operationalises this concepts through guiding learners to undertake projects which are progressively more complex.
+
+This work differs in a core template is provided allowing for less instruction following and the progression does not involve starting from scratch each time. This is notable as I found in P1 that changes to the underlying code structure were stressful and unwelcome for learners one had built familiarity with it  [^20].
+
+In line with UMC, an advanced stage of the stage based approach would be the choice to imagine, design and implement a GDP not included in the menu provided, a process that Dan and Toby take on in P3 (see Vignette 7).
+
 
 
 ### Analysis and discussion in relation to existing research - UMC, half-baked, and constructionist heuristics
@@ -519,22 +538,25 @@ A possible drawback of using a professional tool for novice learners is the risk
 
 
 
-#### A staged based approach structured around a germ cell concept of GDPs
+#### Harbour metaphor
 
-In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stage-based approach which introduces code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation.
+The process of supporting students and designing a bespoke template can be seen through a metaphor of a harbour. In this metaphor the microworld is a vehicle for exploration forming the base of the learning experience and designed to allow input from the technical community through the lens of the facilitator's design experiences. In addition, other learning design choices create a sheltered learning environment, shielded but not cut off from the complexity of online documentation and support.
+
+![](./Pictures/harbour_v1.png){width=95%}
+
+Figure 5.x - Harbour metaphor
 
 
-<!-- THIS STEPPED PROGRESSION COULD BE EXPRESSED AS A TABLE - OR A GRAPHIC .   -->
+Harbours are protective spaces, artificial or naturally occurring, used primarily as suitable places for docking ships. If designed, protection is offered by artificially created harbour walls extending out into the sea, creating a sheltered space. Harbour walls prevent large waves from entering but also provide gaps allowing movement out into the open sea. Harbours provide opportunities for loading, refuelling, or maintaining sea vessels. In addition, harbour transport infrastructures may be present to provide connections to inland rail or road links. The term harbour is also used metaphorically to indicate a space of safety, nurturing, or a gathering space for a community.
 
-![](./Pictures/staged_processes_v1.png){width=95%}
+Harbours are a transitional space between the land and the sea, built to facilitate transport of goods and people between the two domains. Various structures exist, such as gang planks, gantries, and cranes to assist the importing of goods, vehicles, and people onto the ships. This chapter has highlighted  mechanisms for participants to onboard their existing home interests into the new learning space so they can feel more accommodated. (NOT CURRENTLY IN DIAGRAM)
 
-Figure 5.x - Staged processes
+In terms of agency and choice over learner pathway, Harbours are also safe places of play and learning. The safe nature of the harbour encourages free exploration within the protective walls. The boundaries of the harbour walls represent the restrictive decisions in terms of the genre of end product, and simplifications in code structures used. However, these restrictions may be productive through the creative potential of limitations [@rosso_creativity_2014].
 
-This stepped approach which increases complexity of the objective of activity, is present only in limited  CGD&P research. The work of Repenning on SGD operationalises this concepts through guiding learners to undertake projects which are progressively more complex.
+But harbours can be evocative and intriguing, inviting the possibility to travel beyond the walls to unexplored realms. In early stages, the process of clicking remix to expose the underlying code and try to fix and improve an incomplete game exposes a new frontier language of text code which for many will involves entering unfamiliar waters. The motivational impact of an authentic process and set of tools exists in tension with the accompanying complexity [@nachtigall_authenticity_2024]. Thus, while this design uses an authentic, professional text-coding language with its inherent challenges, many design choices were made to shield new users from the complexity of the underlying configuration of interrelated web technologies and to instead highlight design affordances that facilitate creative agency. The use of authentic tools and alignment with professional practice makes it easier for learners to transition from a supported harbour of this learning design and venture out into the open seas of less supported practice. An example of this being Toby and Dan (in Vignette 7.a) who, in their choice to change the game genre from platformer to maze game, leave the safety of a set of design patterns and paired support documentation.
 
-This work differs in a core template is provided allowing for less instruction following and the progression does not involve starting from scratch each time. This is notable as I found in P1 that changes to the underlying code structure were stressful and unwelcome for learners one had built familiarity with it  [^20].
 
-In line with UMC, an advanced stage of the stage based approach would be the choice to imagine, design and implement a GDP not included in the menu provided, a process that Dan and Toby take on in P3 (see Vignette 7).
+
 
 ### Summary of chapter CHAT and DBR concepts and a table of tensions
 
@@ -560,24 +582,6 @@ The design narrative above has acknowledges my active input into the direction o
 
 <!-- Instrumental agency can be seen as the base of a hierarchy of agency, in other words, that other dimensions of agency may need to be built on this one. This foundational agentic level is further explored in relation to other research in the following section. -->
 
-
-
-#### Harbour metaphor
-
-The process of supporting students and designing a bespoke template can be seen through a metaphor of a harbour. In this metaphor the microworld is a vehicle for exploration forming the base of the learning experience and designed to allow input from the technical community through the lens of the facilitator's design experiences. In addition, other learning design choices create a sheltered learning environment, shielded but not cut off from the complexity of online documentation and support.
-
-![](./Pictures/harbour_v1.png){width=95%}
-
-Figure 5.x - Harbour metaphor
-
-
-Harbours are protective spaces, artificial or naturally occurring, used primarily as suitable places for docking ships. If designed, protection is offered by artificially created harbour walls extending out into the sea, creating a sheltered space. Harbour walls prevent large waves from entering but also provide gaps allowing movement out into the open sea. Harbours provide opportunities for loading, refuelling, or maintaining sea vessels. In addition, harbour transport infrastructures may be present to provide connections to inland rail or road links. The term harbour is also used metaphorically to indicate a space of safety, nurturing, or a gathering space for a community.
-
-Harbours are a transitional space between the land and the sea, built to facilitate transport of goods and people between the two domains. Various structures exist, such as gang planks, gantries, and cranes to assist the importing of goods, vehicles, and people onto the ships. This chapter has highlighted  mechanisms for participants to onboard their existing home interests into the new learning space so they can feel more accommodated. (NOT CURRENTLY IN DIAGRAM)
-
-In terms of agency and choice over learner pathway, Harbours are also safe places of play and learning. The safe nature of the harbour encourages free exploration within the protective walls. The boundaries of the harbour walls represent the restrictive decisions in terms of the genre of end product, and simplifications in code structures used. However, these restrictions may be productive through the creative potential of limitations [@rosso_creativity_2014].
-
-But harbours can be evocative and intriguing, inviting the possibility to travel beyond the walls to unexplored realms. In early stages, the process of clicking remix to expose the underlying code and try to fix and improve an incomplete game exposes a new frontier language of text code which for many will involves entering unfamiliar waters. The motivational impact of an authentic process and set of tools exists in tension with the accompanying complexity [@nachtigall_authenticity_2024]. Thus, while this design uses an authentic, professional text-coding language with its inherent challenges, many design choices were made to shield new users from the complexity of the underlying configuration of interrelated web technologies and to instead highlight design affordances that facilitate creative agency. The use of authentic tools and alignment with professional practice makes it easier for learners to transition from a supported harbour of this learning design and venture out into the open seas of less supported practice. An example of this being Toby and Dan (in Vignette 7.a) who, in their choice to change the game genre from platformer to maze game, leave the safety of a set of design patterns and paired support documentation.
 
 
 
