--- a/_posts/thesis_chapters/2025-6-5-Design_v13.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v13.md
@@ -418,17 +418,38 @@ The following design interventions were introduced in P2 and P3 to respond to th
 
 ##### Social coding processes via playtesting
 
+WHERE ELSE IS PLAYTESTING COVERED? HOW TO LINK -
+ - BACK INTO CHAPTER 2? VIA REPENNING? FLOW SOCIAL
+ CONCEPTS OF FLOW AND ENGAGEMENT - AND Fluency IN cH. 6.
 
-WHERE ELSE IS PLAYTESTING COVERED? HOW TO LINK - CONCEPTS OF FLOW AND ENGAGEMENT
 
 The structural changes of starting template meant that players starting with a game in a working state. Thus if changes were carried out in small iterations each change could be self-tested and shared with others via group / social playtesting. This increased the time participants spent playtesting both their own and others’ games dramatically. The process of playtesting became increasingly significant in P2 in a way which transcended an instrumental design process of revision. It took on important social and cultural value.
 
-Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 6.1), and these moments became triggers for collaboration. In response, I prioritised timely support to ensure games remained functional and playable.
+By the middle of P2, playtesting had evolved into a key site of peer exchange, prompting spontaneous sharing of advice, assets, and fixes.
 
-SIGNPOST MRE IN CH.6?
+Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 2). While this frustration was natural for participants blocked in progression, I also felt urgency in my response. In response, I prioritised support to participants with games in a broken stage to make them and playable again so that they did not miss out the valuable experience of social playtesting.
 
-By the middle of P2, playtesting had evolved into a key site of peer exchange, prompting spontaneous sharing of advice, assets, and fixes. Observing this, I recognised the potential of these interactions and, in preparation for P3, began to intervene more gently and strategically to nurture these emergent practices of social coding and mutual aid.
+The characteristic of flow within a social and cultural settings felt very important and evocative to me as a facilitator. This recalls the work of Basawapatna on proximal flow [-@basawapatna_zones_2013], however the structure of the design varies that of SDG considerably.
+Whereas in SDG, X, HERE Y. 
 
+<!--
+FOOT NOTE - FROM CH2.
+In SGD the concept of proximal flow links flow theory and the vital importance of engagement, via scaffolding to the ZPD and the social and environmental nature of that support [@basawapatna_zones_2013].   -->
+
+<!-- , and these moments became triggers for collaboration.  -->
+
+SIGNPOST MORE TO CH.6?
+
+The role of playtesting is explored in relation to he use of GDPs in Chapter in part through a lens of increasing fluency.  
+
+
+
+FLOW SOCIAL
+CONCEPTS OF FLOW AND ENGAGEMENT - AND Fluency IN cH. 6.
+
+To advance the potential of playtesing interactions, in P3, began to intervene gently but strategically to nurture these emergent practices of social coding and mutual aid.
+
+PLAYFUL PLAYTESTING?
 
 ##### Use of side missions to encourage varied creative practices
 
@@ -479,8 +500,9 @@ This chapter has explored the complexity of the interacting tools and documentat
 
 This discussion explores features of the design narrative and the summative table section synthesises aspects of systemic contradictions and highlights how elements of the design process contribute to the research landscape, specifically:
 
-- UMC, half-baked approach and constructionist design principles
-- stage based approach, as a guiding pedagogy
+- A stage based approach, as a particular sub-set of design build test pedagogy is offered as a contribution.
+- UMC, half-baked approach and constructionist design principles, and the increased complexity created by trying to use authentic tools and created links with communities
+- A metaphor - of harbours is offered to clarify this conceptual  contribution
 
  The section ends with a table which begins a process of synthesis of design factors.
 
@@ -567,7 +589,6 @@ Table 5.2 above shows a summary of some of the tensions and design resolutions t
 INSERT TABLE OF THE DESIGN FACTORS.
 
 Table 5.2- Table of emerging tensions and design responses
-
 
 
 At this point it is useful to describe a process here briefly  in relation to the three contradictions explored above [^17]. The evolution of these tools and documentation outlined in C1 and C2  was driven by a need to increase in instrumental agency due to the novice status of participants. As instrumental proficiency increased for some participants it allowed the development of peer learning and other social coding processes to emerge as described in C3.  
