--- a/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
@@ -824,12 +824,15 @@ One of the motivational factors guiding the evolution of the learning design of 
 
 <!-- , and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.   -->
 
+
+
 Observations of participant design behaviour did not align with common design thinking concepts or design cycle frameworks advocated in CGD&P [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024]. The stages were instead fragmented and sometimes happened in parallel. In many interactions, I observed improvisational approaches which incorporated ideation, planning, implementation, and testing in the space of a minute or so. Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Above Toby's increased navigational proficiency was interpreted as  transformation of actions into more fluent operations [@leontiev_activity_2009].
 
 Clive (p) quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
 
-Extending Basawapatna and colleagues [-[@basawapatna_zones_2013]] approach to support proximal flow (see Chapter 2) via just in time documentation aligned with participants goal to support participant engagement, adding greater specificity and choice over which game patterns participants implement. This adaptation help greater alignment with research on the interdependence of flow experience and possibilities for social identity development [@mao_optimal_2016].
+Extending Basawapatna and colleagues [-[@basawapatna_zones_2013]] approach to support  flow SOCIAL FLOW? (see Chapter 2 - DROPPED) via just in time documentation aligned with participants goal to support participant engagement, adding greater specificity and choice over which game patterns participants implement. This adaptation help greater alignment with research on the interdependence of flow experience and possibilities for social identity development [@mao_optimal_2016].
 
+LINK BACK TO NEW MODEL OF DESIGN BUILD TEST IN CHAPTER 5.
 Signposting to Chapter 7.
 
 
