--- a/_posts/thesis_chapters/2025-6-5-Design_v13.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v13.md
@@ -430,7 +430,7 @@ By the middle of P2, playtesting had evolved into a key site of peer exchange, p
 Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 2). While this frustration was natural for participants blocked in progression, I also felt urgency in my response. In response, I prioritised support to participants with games in a broken stage to make them and playable again so that they did not miss out the valuable experience of social playtesting.
 
 The characteristic of flow within a social and cultural settings felt very important and evocative to me as a facilitator. This recalls the work of Basawapatna on proximal flow [-@basawapatna_zones_2013], however the structure of the design varies that of SDG considerably.
-Whereas in SDG, X, HERE Y. 
+Whereas in SDG, X, HERE Y.
 
 <!--
 FOOT NOTE - FROM CH2.
@@ -564,20 +564,21 @@ A possible drawback of using a professional tool for novice learners is the risk
 
 The process of supporting students and designing a bespoke template can be seen through a metaphor of a harbour. In this metaphor the microworld is a vehicle for exploration forming the base of the learning experience and designed to allow input from the technical community through the lens of the facilitator's design experiences. In addition, other learning design choices create a sheltered learning environment, shielded but not cut off from the complexity of online documentation and support.
 
-![](./Pictures/harbour_v1.png){width=95%}
+![Figure 5.x - Harbour metaphor](./Pictures/harbour_v1.png){width=95%}
 
-Figure 5.x - Harbour metaphor
+Harbours are a transitional space between the land and the sea, built to facilitate transport of goods and people between the two domains [^hb2]. This chapter has highlighted both a process of input from professional communities into the Microworld vehicle of the starting template game and  affordances within that design and additional resource which facilitate participants to onboard their existing home interests into the new learning space so they can feel more accommodated. (NOT CURRENTLY IN DIAGRAM)
 
+Harbours are protective spaces, artificial or naturally occurring, used primarily as suitable places for docking ships. If designed, protection is offered by artificially created harbour walls extending out into the sea, creating a sheltered space [^hb1].  Harbour walls prevent large waves from entering but also provide gaps allowing movement out into the open sea. The motivational impact of an authentic process and set of tools exists in tension with the accompanying complexity [@nachtigall_authenticity_2024]. Thus, while this design uses an authentic, professional text-coding language with its inherent challenges, many design choices were made to shield new users from the complexity of the underlying configuration of interrelated web technologies and to instead highlight design affordances that facilitate creative agency.
 
-Harbours are protective spaces, artificial or naturally occurring, used primarily as suitable places for docking ships. If designed, protection is offered by artificially created harbour walls extending out into the sea, creating a sheltered space. Harbour walls prevent large waves from entering but also provide gaps allowing movement out into the open sea. Harbours provide opportunities for loading, refuelling, or maintaining sea vessels. In addition, harbour transport infrastructures may be present to provide connections to inland rail or road links. The term harbour is also used metaphorically to indicate a space of safety, nurturing, or a gathering space for a community.
-
-Harbours are a transitional space between the land and the sea, built to facilitate transport of goods and people between the two domains. Various structures exist, such as gang planks, gantries, and cranes to assist the importing of goods, vehicles, and people onto the ships. This chapter has highlighted  mechanisms for participants to onboard their existing home interests into the new learning space so they can feel more accommodated. (NOT CURRENTLY IN DIAGRAM)
 
 In terms of agency and choice over learner pathway, Harbours are also safe places of play and learning. The safe nature of the harbour encourages free exploration within the protective walls. The boundaries of the harbour walls represent the restrictive decisions in terms of the genre of end product, and simplifications in code structures used. However, these restrictions may be productive through the creative potential of limitations [@rosso_creativity_2014].
 
-But harbours can be evocative and intriguing, inviting the possibility to travel beyond the walls to unexplored realms. In early stages, the process of clicking remix to expose the underlying code and try to fix and improve an incomplete game exposes a new frontier language of text code which for many will involves entering unfamiliar waters. The motivational impact of an authentic process and set of tools exists in tension with the accompanying complexity [@nachtigall_authenticity_2024]. Thus, while this design uses an authentic, professional text-coding language with its inherent challenges, many design choices were made to shield new users from the complexity of the underlying configuration of interrelated web technologies and to instead highlight design affordances that facilitate creative agency. The use of authentic tools and alignment with professional practice makes it easier for learners to transition from a supported harbour of this learning design and venture out into the open seas of less supported practice. An example of this being Toby and Dan (in Vignette 7.a) who, in their choice to change the game genre from platformer to maze game, leave the safety of a set of design patterns and paired support documentation.
+But harbours can be evocative and intriguing, inviting the possibility to travel beyond the walls to unexplored realms.
+
+In early stages, the process of clicking remix to expose the underlying code and try to fix and improve an incomplete game exposes a new frontier language of text code which for many will involves entering unfamiliar waters.
 
 
+The use of authentic tools and alignment with professional practice makes it easier for learners to transition from a supported harbour of this learning design and venture out into the open seas of less supported practice. An example of this being Toby and Dan (in Vignette 7.a) who, in their choice to change the game genre from platformer to maze game, leave the safety of a set of design patterns and paired support documentation.
 
 
 ### Summary of chapter CHAT and DBR concepts and a table of tensions
@@ -703,6 +704,12 @@ Gilbert is the worsted name.
 [^15]: More detail of the engagement and disengagement of Anastasia's family is described in the case study Appendix 5.bee,
 
 [^apb]: Fuller feedback is described in the Appendix 5.bee
+
+[^hb1]: The term harbour is also used metaphorically to indicate a space of safety, nurturing, or a gathering space for a community.
+
+[^hb2]:Harbours provide opportunities for loading, refuelling, or maintaining sea vessels. In addition, harbour transport infrastructures may be present to provide connections to inland rail or road links. Various structures exist, such as gang planks, gantries, and cranes to assist the importing of goods, vehicles, and people onto the ships.
+
+
 
 [^16]: A design summary which links to downloadable, and adaptable resources is available as an open educational resources is included as Appendix.resources and is available online here.
 
