--- a/_posts/thesis_chapters/2025-6-5-Design_v13.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v13.md
@@ -558,40 +558,45 @@ ADDITION MADIHA's reflection in interview data.
 
 A possible drawback of using a professional tool for novice learners is the risk of culture shock when participants encounter the unfamiliar and potentially alienating aspects of a professional coding ecosystem. The learning design outlined in this chapter helps address at least the beginning of this process by providing a protective, scaffolded learning environment.
 
-
-
 #### Harbour metaphor
 
-The process of supporting students and designing a bespoke template can be seen through a metaphor of a harbour. In this metaphor the microworld is a vehicle for exploration forming the base of the learning experience and designed to allow input from the technical community through the lens of the facilitator's design experiences. In addition, other learning design choices create a sheltered learning environment, shielded but not cut off from the complexity of online documentation and support.
+The process of supporting students and designing a bespoke template can be seen through a metaphor of a harbour. Harbours are a transitional space between the land and the sea, built to facilitate transport of goods and people between the two domains [^hb1].  In this metaphor the Microworld is a vehicle for exploration forming the base of the learning experience and designed to allow input from the technical community through the lens of the facilitator's design experiences. This chapter has highlighted a process of input from professional communities into the Microworld vehicle of the starting template game.
+
+Affordances within the template design and additional resources which facilitate participants to onboard their existing home interests into the new learning space so they can feel more accommodated. (NOT CURRENTLY IN DIAGRAM)
 
 ![Figure 5.x - Harbour metaphor](./Pictures/harbour_v1.png){width=95%}
 
-Harbours are a transitional space between the land and the sea, built to facilitate transport of goods and people between the two domains [^hb2]. This chapter has highlighted both a process of input from professional communities into the Microworld vehicle of the starting template game and  affordances within that design and additional resource which facilitate participants to onboard their existing home interests into the new learning space so they can feel more accommodated. (NOT CURRENTLY IN DIAGRAM)
+<!-- In addition, other learning design choices create a sheltered learning environment, shielded but not cut off from the complexity of online documentation and support. -->
 
-Harbours are protective spaces, artificial or naturally occurring, used primarily as suitable places for docking ships. If designed, protection is offered by artificially created harbour walls extending out into the sea, creating a sheltered space [^hb1].  Harbour walls prevent large waves from entering but also provide gaps allowing movement out into the open sea. The motivational impact of an authentic process and set of tools exists in tension with the accompanying complexity [@nachtigall_authenticity_2024]. Thus, while this design uses an authentic, professional text-coding language with its inherent challenges, many design choices were made to shield new users from the complexity of the underlying configuration of interrelated web technologies and to instead highlight design affordances that facilitate creative agency.
+Harbours are protective spaces, artificial or naturally occurring, used primarily as suitable places for docking ships. If designed, protection is offered by artificially created harbour walls extending out into the sea, creating a sheltered space [^hb2]. The boundaries of the harbour walls represent the restrictive decisions in terms of the genre of end product, and simplifications in code structures used. While this design uses an authentic, professional text-coding language with its inherent challenges, many design choices were made to shield new users from the complexity of the underlying configuration of interrelated web technologies. The safe nature of the harbour encourages free exploration within the protective walls. Restrictions may be productive through the creative potential of limitations [@rosso_creativity_2014].
 
-
-In terms of agency and choice over learner pathway, Harbours are also safe places of play and learning. The safe nature of the harbour encourages free exploration within the protective walls. The boundaries of the harbour walls represent the restrictive decisions in terms of the genre of end product, and simplifications in code structures used. However, these restrictions may be productive through the creative potential of limitations [@rosso_creativity_2014].
-
-But harbours can be evocative and intriguing, inviting the possibility to travel beyond the walls to unexplored realms.
-
-In early stages, the process of clicking remix to expose the underlying code and try to fix and improve an incomplete game exposes a new frontier language of text code which for many will involves entering unfamiliar waters.
+Harbour walls prevent large waves from entering but also provide gaps allowing movement out into the open sea [^hb3]. The motivational impact of an authentic process and set of tools exists in tension with the accompanying complexity [@nachtigall_authenticity_2024].  The use of authentic tools and alignment with professional practice makes it easier for learners to transition from a supported harbour of this learning design and venture out into the open seas of less supported practice, especially the choppy waters represented by the complexity of accessing and interpreting online documentation and support [^hb4].   
 
 
-The use of authentic tools and alignment with professional practice makes it easier for learners to transition from a supported harbour of this learning design and venture out into the open seas of less supported practice. An example of this being Toby and Dan (in Vignette 7.a) who, in their choice to change the game genre from platformer to maze game, leave the safety of a set of design patterns and paired support documentation.
+<!-- In terms of agency and choice over learner pathway, Harbours are also safe places of play and learning. Harbours can be evocative and intriguing, inviting the possibility to travel beyond the walls to unexplored realms. -->
 
 
-### Summary of chapter CHAT and DBR concepts and a table of tensions
+### Chapter conclusion
 
-This chapter has described three contradictions that occurred during an iterative, phase-based approach using a methodology guided by techniques of DBR and CHAT. The use of a design narrative from DBR allows a detailed and replicable approach [^16].
+**Summary of chapter CHAT and DBR concepts and a table of tensions**
 
-Table 5.2 above shows a summary of some of the tensions and design resolutions that emerged from the process.
+This chapter has described three contradictions that occurred during an iterative, phase-based approach using a methodology guided by techniques of DBR and CHAT.
+
+Table 5.2 shows a summary of some of the tensions and design resolutions that emerged from the process.
 
 INSERT TABLE OF THE DESIGN FACTORS.
 
 Table 5.2- Table of emerging tensions and design responses
 
+The use of a design narrative processes informed by  DBR practice [@hoadley_creating_2002] has been employed to share detailed and replicable approach . With that aim in mind the following list shares links to currently online and reusable resources [^16].
 
+- P2-3 Starting Game Template: https://codepen.io/mrmick/pen/gbaOEgB?editors=0010
+- Menu of GDPs: https://glitch-game-club.github.io/ggcp/ggc-examples/
+- Manual: http://3m.flossmanuals.net
+- Manual Splash page: https://glitch-game-club.github.io/ggcp/manual
+
+
+IS THIS PART ON AGENCY REALLY NEEDED
 At this point it is useful to describe a process here briefly  in relation to the three contradictions explored above [^17]. The evolution of these tools and documentation outlined in C1 and C2  was driven by a need to increase in instrumental agency due to the novice status of participants. As instrumental proficiency increased for some participants it allowed the development of peer learning and other social coding processes to emerge as described in C3.  
 
 The emergent and mutual nature of this design process aligns with both DBR principles and CHAT concepts of transformational agency by double stimulation (TADS). Specifically, transformation in tool use based on explicit and implicit feedback.
@@ -601,6 +606,10 @@ The design approach that followed the moments of contraction outlined above  was
 The descriptions of this chapter also show the process to be demanding on participants. I was fortunate that the tenacious character of the participants in P1 helped mitigate the challenges posed by the challenges introduced incomplete design.
 
 The design narrative above has acknowledges my active input into the direction of the process in line with an active approach to steering  the design towards collaborative learning opportunities [maybe footnote] [@stetsenko2020radical]. My reflective analysis within journal entries show that While this general direction was present from early stages, my this on-going process served a purpose to divine a deeper understanding of my own guiding motivations driving the design changes [^18].
+
+This chapter has explored the iterative development of the learning design, focusing on resolving barriers to coding and aligning with existing research principles, particularly the use-modify-create (UMC) process and constructionism. It emphasized the potential and challenges of leveraging professional tools within scaffolded environments, underscoring the pivotal role of learner-led design decisions in motivating coding practices and fostering social collaboration. Two key lines of inquiry which illuminate the cultural and social dimensions of game-making are explored in subsequent chapters. Chapter 7 examines the impact of emerging community processes on participants’ agency, while the Chapter 6 employs video data to describe and analyse the diverse applications of GDPs.
+
+
 
 <!-- Instrumental agency can be seen as the base of a hierarchy of agency, in other words, that other dimensions of agency may need to be built on this one. This foundational agentic level is further explored in relation to other research in the following section. -->
 
@@ -624,9 +633,9 @@ The structure of documentation, created in response to participant requests for 
 <!-- NOTE / MOVE - It could be seen as a progression to move from more scaffolded use of instructions to the use of code snippets alone with practice although data of Toby may not support that progression suggesting instead it may be a matter of preference. -->
 
 <!-- LINK  -->
-This chapter has explored the iterative development of the learning design, focusing on resolving barriers to coding and aligning with existing research principles, particularly the use-modify-create (UMC) process and constructionism. It emphasized the potential and challenges of leveraging professional tools within scaffolded environments, underscoring the pivotal role of learner-led design decisions in motivating coding practices and fostering social collaboration. Two key lines of inquiry which illuminate the cultural and social dimensions of game-making are explored in subsequent chapters. Chapter 7 examines the impact of emerging community processes on participants’ agency, while the Chapter 6 employs video data to describe and analyse the diverse applications of GDPs.
 
 Gilbert is the worsted name.
+
 
 ## Footnotes
 
@@ -705,13 +714,17 @@ Gilbert is the worsted name.
 
 [^apb]: Fuller feedback is described in the Appendix 5.bee
 
-[^hb1]: The term harbour is also used metaphorically to indicate a space of safety, nurturing, or a gathering space for a community.
 
-[^hb2]:Harbours provide opportunities for loading, refuelling, or maintaining sea vessels. In addition, harbour transport infrastructures may be present to provide connections to inland rail or road links. Various structures exist, such as gang planks, gantries, and cranes to assist the importing of goods, vehicles, and people onto the ships.
+[^hb1]:Harbours provide opportunities for loading, refuelling, or maintaining sea vessels. In addition, harbour transport infrastructures may be present to provide connections to inland rail or road links. Various structures exist, such as gang planks, gantries, and cranes to assist the importing of goods, vehicles, and people onto the ships.
+
+[^hb2]: The term harbour is also used metaphorically to indicate a space of safety, nurturing, or a gathering space for a community.
 
 
+[^hb3]: In early stages, the process of clicking remix to expose the underlying code and try to fix and improve an incomplete game exposes a new frontier language of text code which for many will involves entering unfamiliar waters.
 
-[^16]: A design summary which links to downloadable, and adaptable resources is available as an open educational resources is included as Appendix.resources and is available online here.
+[^hb4]: An example of this being Toby and Dan (in Vignette 6) who, in their choice to change the game genre from platformer to maze game, leave the safety of a set of design patterns and paired support documentation. A process explored in more detail in Chapter 6.
+
+[^16]: A fuller design summary which includes the P1 template and previous iterations  is included as Appendix. D.1.a and is available online here.  These resources are freely downloadable, and adaptable in line with the ethos of open educational resources.
 
 [^17]: The process of developing shifting forms of agency is explored in more depth in Chapter 7
 
